fixed top bar message align

--- a/server/public/css/login.css
+++ b/server/public/css/login.css
@@ -194,6 +194,7 @@ img {
 
 .max-width {
     max-width: 800px;
+    padding-top: 50px;
     margin-right: auto;
     margin-left: auto;
     display: flex;
